# ALPP

./: README.md
ll-be/: .dockerignore  .env.example  .geminiignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ingest_templates.py  pyproject.toml  test_email.py
ll-be/knowledge/: Ukrainian-example.md  basic-lesson.md  modern-approach.md  old-approach.md
ll-be/migrations/: env.py
ll-be/migrations/versions/: 022895971a1b_rename_is_active_to_verified_and_add_.py  3ce4fd430e9f_enable_vector_extension.py  428a4065d541_initial_migration.py  52a5880a5326_split_role_and_job_role.py  55e43420f69d_add_names_and_role_to_user.py  59898fd58c5e_add_documents_table.py  622b3bc23503_add_hashed_password_to_user.py  6d9fe84ed395_remove_otp_table.py
ll-be/src/: app.py
ll-be/src/config/: settings.py
ll-be/src/data/: database.py
ll-be/src/entity/: document.py  user.py
ll-be/src/repositories/: base_repository.py  user_repository.py
ll-be/src/routers/: ai.py  auth.py  documents.py  users.py
ll-be/src/schemas/: auth.py  lesson.py  user.py
ll-be/src/services/: ai_service.py  auth_service.py  ingestion_service.py  mail_service.py  pdf_service.py  redis_service.py  security.py
ll-be/src/services/prompts/: system_agent.md
ll-be/src/templates/: lesson_plan.html  otp_verification.html  password_reset.html
ll-fe/: Dockerfile  README.md  next.config.mjs  package.json
ll-fe/src/app/: layout.jsx  page.jsx
ll-fe/src/components/: auth-modal.jsx  landing.jsx  navbar.jsx
ll-fe/src/lib/: api.js  toast-context.jsx
ll-fe/src/styles/: globals.css
(+1 files in other folders)
