[project]
name = "ll-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "docx2txt>=0.9",
    "fastapi>=0.136.1",
    "fastapi-limiter>=0.2.0",
    "fastapi-mail>=1.6.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.18",
    "latex2mathml>=3.81.0",
    "lxml>=6.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = []
